feat: edit character names
